--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,10 +8,12 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
+	<link rel="stylesheet" href="css/style.css"> 
 
 	<!-- JS -->
 	<script src="libs/angular/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+
 	<script src="libs/angular-route/angular-route.min.js"></script>
 
 	<!-- ANGULAR CUSTOM -->
@@ -39,7 +41,6 @@
 
 	<!-- ANGULAR DYNAMIC CONTENT -->
 	<div ng-view></div>
-
-</div>
+	
 </body>
 </html>
