--- a/public/views/nerd.html
+++ b/public/views/nerd.html
@@ -6,15 +6,15 @@
 	<FORM>
 		<ul>
 			<li ng-repeat="item in items">
-				{{ item }} <button type="button" ng-click="editItem(item)">UPDATE</button>
-				<button type="submit" data-ng-hide="editMode" data-ng-click="editMode = true; editAppKey(item)" class="btn btn-default">Edit</button>
-				<button ng-click="remove($index)">Remove</button>
+				{{ item.name }} 
+				<button data-ng-click="editMode = true; editAppKey(item)" data-ng-hide="editMode" class="btn btn-default">Edit</button>
+				<button ng-click="remove($index)" data-ng-hide="editMode">Remove</button>
 				<span data-ng-hide="editMode"></span>
-				<input type="text" data-ng-show="editMode" data-ng-model="item" data-ng-required />			
+				<input type="text" data-ng-show="editMode" data-ng-model="item.name" data-ng-required />			
+				<button ng-click="update($index)" data-ng-show="editMode">Save</button>
+				<button ng-click="editMode = false; cancel(item.name)" data-ng-show="editMode">Cancel</button>
 			</li>
 		</ul>
-
-
 		<div>
 			<input type="text" ng-model="input">
 			<button type="submit" ng-click="add()">Add</button>
